--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -29,6 +29,10 @@ jobs:
 
             - name: unit testing
               run: npm test
-            
 
+            - name: archive test result
+              uses: actions/upload-artifact@v3
+              with:
+                name: mocha-test-result
+                path: test-result.xml
             
