--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -34,5 +34,5 @@ jobs:
               uses: actions/upload-artifact@v3
               with:
                 name: mocha-test-result
-                path: test-result.xml
+                path: test-results.xml
             
