--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -35,11 +35,40 @@ jobs:
               run: npm install
 
             - name: unit testing
+              id: nodejs-unit-testing-step
               run: npm test
 
             - name: archive test result
+              if: steps.nodejs-unit-testing-step.outcome == 'failure' || steps.nodejs-unit-testing-step.outcome == 'success'
               uses: actions/upload-artifact@v3
               with:
                 name: mocha-test-result
                 path: test-results.xml
-            
+
+    code-coverage:
+      name: code coverage
+      runs-on: ubuntu-latest
+      needs: unit-testing
+      steps:
+          - name: checkout
+            uses: actions/checkout@v4
+                      
+          - name: setup node js v18
+            uses: actions/setup-node@v3
+            with:
+              node-version: 18
+          
+          - name: install depend.
+            run: npm install
+          
+          - name: check code coverage
+            continue-on-error: true
+            run: npm run coverage
+          
+          - name: archive test result
+            uses: actions/upload-artifact@v3
+            with:
+              name: code-coverage-result
+              path: coverage
+              retention-days: 5
+          
