--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -83,7 +83,7 @@ jobs:
           uses: actions/checkout@v4
 
         - name: docker hub login
-          uses: actions/login-action@v2
+          uses: docker/login-action@v2
           with:
             username: ${{ vars.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
