--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -95,5 +95,20 @@ jobs:
             push: false
             tags: ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
 
+        - name: docker image test
+          run: |
+                docker image
+                docker run --namesolar-system-app -d \
+                      p 3000:3000 \
+                      -e MONGO_URI=$MONGO_URI \
+                      -e MONGO_USERNAME=$MONGO_USERNAME \
+                      e MONGO_PASSWORD=$MONGO_PASSWORD \
+                      ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+                export IP-$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
+                echo $IP
+                docker inspect solar-system-app | grep -i IPAddress
+
+                echo testing image URL using wget
+                wget -q -o -127.0.0.1:3000/live | grep live
       
           
