--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -97,9 +97,9 @@ jobs:
 
         - name: docker image test
           run: |
-                docker image
+                docker images
                 docker run --name solar-system-app -d \
-                      p 3000:3000 \
+                      -p 3000:3000 \
                       -e MONGO_URI=$MONGO_URI \
                       -e MONGO_USERNAME=$MONGO_USERNAME \
                       e MONGO_PASSWORD=$MONGO_PASSWORD \
@@ -109,6 +109,6 @@ jobs:
                 docker inspect solar-system-app | grep -i IPAddress
 
                 echo testing image URL using wget
-                wget -q -o -127.0.0.1:3000/live | grep live
+                wget -q -o - 127.0.0.1:3000/live | grep live
       
           
