--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -102,13 +102,19 @@ jobs:
                       -p 3000:3000 \
                       -e MONGO_URI=$MONGO_URI \
                       -e MONGO_USERNAME=$MONGO_USERNAME \
-                      e MONGO_PASSWORD=$MONGO_PASSWORD \
+                      -e MONGO_PASSWORD=$MONGO_PASSWORD \
                       ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
                 export IP-$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
                 echo $IP
-                docker inspect solar-system-app | grep -i IPAddress
+                docker inspect solar-system-app | grep i IPAddress
 
                 echo testing image URL using wget
                 wget -q -o - 127.0.0.1:3000/live | grep live
       
-          
+        - name: Build and push
+          uses: docker/build-push-action@v5
+          with:
+            context: .
+            push: true
+            tags: ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+
