--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -104,7 +104,7 @@ jobs:
                       -e MONGO_USERNAME=$MONGO_USERNAME \
                       -e MONGO_PASSWORD=$MONGO_PASSWORD \
                       ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
-                export IP-$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
+                export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
                 echo $IP
                 docker inspect solar-system-app | grep i IPAddress
 
