--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -106,7 +106,7 @@ jobs:
                       ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
                 export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
                 echo $IP
-                docker inspect solar-system-app | grep i IPAddress
+                #docker inspect solar-system-app | grep i IPAddress
 
                 echo testing image URL using wget
                 wget -q -o - 127.0.0.1:3000/live | grep live
