--- a/.github/workflows/container-registery.yml
+++ b/.github/workflows/container-registery.yml
@@ -29,4 +29,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ghcr.io/${{ github.repository_owner }}/my-image:latest
+        tags: ghcr.io/${{ github.repository_owner }}/solar-system:latest
